# Renamer

./: .flake8  .gitignore  .travis.yml  LICENSE  README.md  README.rst  rename.py  rename_series.py  renamer-cli.py  renamer.py  setup.cfg  setup.py  tvmaze.py
.github/workflows/: python-tests.yml
renamer/: __init__.py  __main__.py  _main_cli.py  cli.py  folder.py  localpath.py  tvmaze.py  web.py
renamer/ui/: __init__.py  cli.py
resources/: version.txt
src/: renamer.py
src/renamer/: __init__.py  __main__.py  cli.py  errors.py  localpath.py  log.py  utils.py  web.py
src/renamer/cli/: __init__.py  arguments.py  utils.py
src/renamer/filename/: __init__.py  animes.py  base.py  movies.py  series.py  types.py
src/renamer/localpath/: __init__.py  error.py  files.py  log.py  names.py  shows.py  types.py  utils.py
src/renamer/provider/: __init__.py  base.py  tvmaze.py
src/renamer/ui/: cli.py
src/renamer/web/: __init__.py  error.py  provider.py  types.py  utils.py
tests/: broken_test_web__movie.py  test_cli_parser.py  test_filename.py  test_localpath__movie.py  test_localpath_dir.py  test_localpath_names_alt.py  test_localpath_names_preformat.py  test_localpath_names_scene.py  test_localpath_serie_alt_layout.py  test_localpath_serie_preformat_layout.py  test_localpath_serie_scene_layout.py  test_localpath_shows_alt.py  test_localpath_shows_preformat.py  test_localpath_shows_scene.py  test_provider_tvmaze.py  test_web_tvshow.py
