[metadata]
name = renamer
version = attr: renamer.__version__
description = A utility to rename downloaded media files.
long_description = file: README.md
url = https://github.com/caedus75/Renamer
author = Carlos Millett
keywords = utility, rename, TV Show, Anime, Movie
license = BSD 2-Clause License
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: End Users/Desktop
	Topic :: Utilities
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = False
package_dir =
	=src
packages = find:
python_requires =
	>= 3.7

[options.entry_points]
console_scripts =
	renamer = renamer.__main__:main

[options.packages.find]
where = src
